--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "tailwindcss": "^2.0.1"
     },
     "dependencies": {
-        "animate.css": "^4.1.1"
+        "animate.css": "^4.1.1",
+        "chart.js": "^3.6.0"
     }
 }
