--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,13 @@ services:
             test: ["CMD", "pg_isready", "-q", "-d", "${DB_DATABASE}", "-U", "${DB_USERNAME}"]
             retries: 3
             timeout: 5s
+    mailhog:
+        image: 'mailhog/mailhog'
+        ports:
+            - '1025:1025'
+            - '8025:8025'
+        networks:
+            - sail
 networks:
     sail:
         driver: bridge
