--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "spatie/laravel-web-tinker": "^1.8"
     },
     "autoload": {
         "psr-4": {
