--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "animate.css": "^4.1.1",
-        "chart.js": "^3.6.0"
+        "chart.js": "^3.6.0",
+        "quill": "^1.3.7"
     }
 }
